include/jmm/mesh3.h

typedef struct mesh3_data {
  size_t nverts;
  dbl3 *verts;
  size_t ncells;
  uint4 *cells;
} mesh3_data_s;
void mesh3_data_init_from_bin(mesh3_data_s *data, char const *verts_path, char const *cells_path);
JMM_LINKAGE void mesh3_data_init_from_off_file(mesh3_data_s *data, char const *path, dbl maxvol, bool verbose);
void mesh3_data_deinit(mesh3_data_s *data);
JMM_LINKAGE error_e mesh3_data_insert_vert(mesh3_data_s *data, dbl3 const x, dbl eps);
JMM_LINKAGE void mesh3_alloc(mesh3_s **mesh);
JMM_LINKAGE void mesh3_dealloc(mesh3_s **mesh);
JMM_LINKAGE void mesh3_init(mesh3_s *mesh, mesh3_data_s const *data, bool compute_bd_info, dbl const *eps);
dbl3 const *mesh3_get_verts_ptr(mesh3_s const *mesh);
size_t const *mesh3_get_cells_ptr(mesh3_s const *mesh);
size_t mesh3_ncells(mesh3_s const *mesh);
size_t mesh3_nverts(mesh3_s const *mesh);
size_t mesh3_find_cell_containing_point(mesh3_s const *mesh, dbl const x[3], size_t lc);
void mesh3_ve(mesh3_s const *mesh, size_t lv, size_t (*ve)[2]);
void mesh3_vf(mesh3_s const *mesh, size_t i, size_t (*vf)[3]);
void mesh3_ee(mesh3_s const *mesh, size_t const e[2], size_t (*ee)[2]);
void mesh3_get_inc_diff_edges(mesh3_s const *mesh, size_t l, size_t (*le)[2]);
void mesh3_get_inc_bdf(mesh3_s const *mesh, size_t l, size_t (*lf)[3]);
void mesh3_get_reflector(mesh3_s const *mesh, size_t i, size_t (*lf)[3]);
void mesh3_get_diffractor(mesh3_s const *mesh, size_t i, size_t (*le)[2]);
void mesh3_get_bdf_inc_on_edge(mesh3_s const *mesh, size_t const le[2], size_t (*lf)[3]);