src/eik3hh_branch.h

typedef enum eik3hh_branch_type {
  EIK3HH_BRANCH_TYPE_UNINITIALIZED,
  EIK3HH_BRANCH_TYPE_PT_SRC,
  EIK3HH_BRANCH_TYPE_REFL,
} eik3hh_branch_type_e;
void eik3hh_branch_alloc(eik3hh_branch_s **branch);
void eik3hh_branch_init_pt_src(eik3hh_branch_s *branch, eik3hh_s const *hh,
                               dbl3 const xsrc);
void eik3hh_branch_dealloc(eik3hh_branch_s **hh);
void eik3hh_branch_solve(eik3hh_branch_s *branch, bool verbose);
eik3_s *eik3hh_branch_get_eik(eik3hh_branch_s *branch);
dbl const *eik3hh_branch_get_spread(eik3hh_branch_s const *branch);
dbl const *eik3hh_branch_get_org(eik3hh_branch_s const *branch);
array_s *eik3hh_branch_get_visible_refls(eik3hh_branch_s const *branch);
eik3hh_branch_s *eik3hh_branch_add_refl(eik3hh_branch_s const *branch,
                                        size_t refl_index);